// Code generated by entproto. DO NOT EDIT.
syntax = "proto3";

package entpb;

import "google/protobuf/empty.proto";

option go_package = "github.com/tkame123/ddd-sample/app/order_api/adapter/database/ent/proto/entpb";

message Order {
  int64 id = 1;

  int64 approvalLimit = 2;
}

message GetOrderRequest {
  int64 id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

service OrderService {
  rpc Get ( GetOrderRequest ) returns ( Order );
}
